# Fnaf1-sfml

./: .gitignore  .gitmodules  Build&RunGame.bat  CMakeLists.txt  Fnaf-SFML.buildscript  Fnaf1-sfml.code-workspace  LayersExplain.txt  README.md  generatesolution-linux.sh  generatesolution-macos.sh  generatesolution-win64.bat  notes.txt
Assets/: Assets from here.url
Assets/Font/: readme.txt
Docs/: TODO.md
Engine/: CMakeLists.txt  Engine.buildscript
Engine/src/: pch.h
Engine/src/Accessibility/: SubtitleTrack.cpp  SubtitleTrack.h
Engine/src/Animation/: FlipBook.cpp  FlipBook.h  Flipbook.cpp  Flipbook.h  GlitchEffect.cpp  GlitchEffect.h
Engine/src/Assets/: Resources.cpp  Resources.h
Engine/src/Audio/: AudioClip.cpp  AudioClip.h  AudioManager.cpp  AudioManager.h
Engine/src/Components/: Camera.cpp  Camera.h
Engine/src/Core/: Actor.h  Application.cpp  Application.h  Window.cpp  Window.h
Engine/src/Graphics/: Button.h  FadeEffect.cpp  FadeEffect.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  ScopedView.h  SpriteLayout.cpp  SpriteLayout.h
Engine/src/Input/: InputActionMap.cpp  InputActionMap.h
Engine/src/Layers/: LayerManager.cpp  LayerManager.h
Engine/src/Math/: Vector2.h  Vector3.h
Engine/src/Narrative/: Dialogue.cpp  Dialogue.h  MentalState.cpp  MentalState.h
Engine/src/Rhythm/: RhythmTrack.cpp  RhythmTrack.h
Engine/src/SFML/: PaingineSFML.cpp  PaingineSFML.h  Window.hpp
Engine/src/SFML/Window/: Keyboard.hpp
Engine/src/Save/: SaveGame.cpp  SaveGame.h  SaveSystem.cpp  SaveSystem.h
Engine/src/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/src/UI/: BaseButton.cpp  BaseButton.h  HUDButton.cpp  HUDButton.h  ImageButton.cpp  ImageButton.h  Layout.h  TopBottomButtons.cpp  TopBottomButtons.h
Engine/src/Utils/: CrashHandler.h  Helpers.cpp  Helpers.h  Profiler.cpp  Profiler.h
Engine/src/imgui/: imgui-SFML.cpp  imgui-SFML.h
Fnaf/: CMakeLists.txt  Fnaf-SFML.buildscript
Fnaf/src/: Animatronic.cpp  Animatronic.h  AudioManager.cpp  AudioManager.h  CameraSystem.cpp  CameraSystem.h  GameState.cpp  GameState.h  LayerDefines.h  Office.cpp  Office.h  Player.h  Power.cpp  Power.h  UiLayout.h  fnaf.cpp  fnaf.hpp  main.cpp  pch.h
Fnaf/src/Assets/: Resources.h
Fnaf/src/Scenes/: Gameplay.cpp  Gameplay.h  Menu.cpp  Menu.h  Warning.cpp  Warning.h
cmake/: group_sources.cmake
src/: main.cpp
